// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders events in different view modes with events should return list 1`] = `","`;

exports[`renders events in different view modes with events should return matrix 1`] = `
Array [
  <div
    className="event-matrix"
  />,
  ",",
]
`;

exports[`renders events in different view modes with events should return slider 1`] = `
Array [
  <div
    className="slick-slider slick-initialized"
  >
    
    <div
      className="slick-list"
    >
      <div
        className="slick-track"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        style={
          Object {
            "WebkitTransform": "translate3d(0px, 0px, 0px)",
            "WebkitTransition": "",
            "msTransform": "translateX(0px)",
            "opacity": 1,
            "transform": "translate3d(0px, 0px, 0px)",
            "transition": "",
          }
        }
      />
    </div>
    
    
  </div>,
  ",",
]
`;

exports[`renders events in different view modes without events should return list 1`] = `null`;

exports[`renders events in different view modes without events should return matrix 1`] = `
<div
  className="event-matrix"
/>
`;

exports[`renders events in different view modes without events should return slider 1`] = `
<div
  className="slick-slider slick-initialized"
>
  
  <div
    className="slick-list"
  >
    <div
      className="slick-track"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "WebkitTransform": "translate3d(0px, 0px, 0px)",
          "WebkitTransition": "",
          "msTransform": "translateX(0px)",
          "opacity": 1,
          "transform": "translate3d(0px, 0px, 0px)",
          "transition": "",
        }
      }
    />
  </div>
  
  
</div>
`;
